Sonar cleanup (#355)
* "Stream.toList()" method should be used instead of "collectors"
  when unmodifiable list needed java:S6204
* Parentheses should be removed from a single lambda parameter
  when its type is inferred java:S1611
* Java features should be preferred to Guava java:S4738